data/derived/fa15/progs/unify/prog3618.ml.out
Characters 28-64:
  let fixpoint (f,b) = wwhile ((fun x -> (wwhile(f,b)), (b=f(b)))),b;;
                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression should not be a function, the expected type is
('a -> 'a * bool) * 'a
